time-sea-chatgpt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: time-sea-chatgpt
  name: time-sea-chatgpt
