time-sea-chatgpt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-sea-chatgpt-web
  namespace: time-sea-chatgpt
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "__traefik_sticky"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  selector:
    appID: time-sea-chatgpt-web
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
